[package]
name = "chip8"
version = "0.1.0"
edition = "2024"
description = "A simple CHIP-8 emulator written in Rust"
license = "Unlicense"

[dependencies]
bitvec = "1.0.1"
anyhow = "1.0.98"
rand = "0.9.1"
ratatui = "0.29.0"
crossterm = "0.29.0"
clap = {version = "4.5.41", features = ["derive"]}
rodio = "0.17.3"
rdev = "0.5.3"
